# dockit

./: .gitignore  README.md  README_CN.md  _files.md  pyproject.toml
app/: app.py
src/dockit/: __init__.py  docx.py  pptx.py
